--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,11 @@
   height: 80px;
 }
 
-.App-header {
+.header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
 }
 
 @keyframes App-logo-spin {
