--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,3 +20,14 @@
   padding: 2em;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.16), 0 1px 10px 0 rgba(0, 0, 0, 0.12) !important;
 }
+.personalia-list {
+  list-style: none;
+  columns: 2;
+}
+.personalia-list li {
+  padding: 1rem;
+}
+.personalia-list li .title {
+  font-weight: bold;
+  display: block;
+}
