--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,12 +13,19 @@
   flex-flow: column;
   align-items: center;
 }
-.Box {
-  width: 50vw;
+.BoxWithHeader {
+  width: 50%;
   min-height: 200px;
-  background-color: white;
+}
+.Box {
   padding: 2em;
+  background-color: white;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.16), 0 1px 10px 0 rgba(0, 0, 0, 0.12) !important;
+}
+.box-footer {
+  width: 40%;
+  font-style: italic;
+  margin-top: 2rem;
 }
 .personalia-list {
   list-style: none;
