--- a/src/less/components/box.less
+++ b/src/less/components/box.less
@@ -6,10 +6,19 @@
   align-items: center;
 }
 
-.Box {
-  width: 50vw;
+.BoxWithHeader {
+  width: 50%;
   min-height: 200px;
-  background-color: white;
+}
+
+.Box {
   padding: 2em;
-	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.16),0 1px 10px 0 rgba(0,0,0,0.12)!important;
+  background-color: white;
+  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.16),0 1px 10px 0 rgba(0,0,0,0.12)!important;
+}
+
+.box-footer {
+  width: 40%;
+  font-style: italic;
+  margin-top: 2rem;
 }
