Add ellipsis on text-overflow to list-title
Avoiding text break on mobile devices.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -37,4 +37,7 @@
 .personalia-list li .title {
   font-weight: bold;
   display: block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
