--- a/src/less/components/personalia.less
+++ b/src/less/components/personalia.less
@@ -8,6 +8,9 @@
     .title {
       font-weight: bold;
       display: block;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
   }
 }
