--- a/src/css/index.css
+++ b/src/css/index.css
@@ -27,6 +27,10 @@
   font-style: italic;
   margin-top: 2rem;
 }
+.box-icon {
+  float: left;
+  margin-left: -9vw;
+}
 .personalia-list {
   list-style: none;
   columns: 2;
