--- a/src/css/index.css
+++ b/src/css/index.css
@@ -16,11 +16,17 @@
 .BoxWithHeader {
   width: 50vw;
   min-height: 200px;
+  margin-right: 15%;
+}
+.BoxWithHeader h1 {
+  margin-left: 15%;
 }
 .Box {
   padding: 2em;
   background-color: white;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.16), 0 1px 10px 0 rgba(0, 0, 0, 0.12) !important;
+  display: inline-block;
+  width: 85%;
 }
 .box-footer {
   width: 40%;
@@ -28,8 +34,13 @@
   margin-top: 2rem;
 }
 .box-icon {
-  float: left;
-  margin-left: -9vw;
+  display: inline-block;
+  vertical-align: top;
+}
+.icon-box-wrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 .personalia-list {
   list-style: none;
