--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,3 +1,4 @@
 @import './components/header.less';
 @import './components/box.less';
 @import './components/personalia.less';
+@import './components/adresse.less';
