--- a/src/less/components/adresse.less
+++ b/src/less/components/adresse.less
@@ -1,7 +1,6 @@
 .address-box {
   ul {
     list-style-type: none;
-    columns: 4;
     padding: 1em 0 0 0;
 
     .title {
@@ -12,6 +11,14 @@
       overflow: hidden;
       padding-bottom: 0.5em;
     }
+  }
+
+  ul.address-list-col-4 {
+    columns: 4;
+  }
+
+  ul.address-list-col-3 {
+    columns: 3
   }
 
   li {
