Add Boxes for static links

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -85,3 +85,10 @@
 .address-box .address-type {
   margin-top: 0;
 }
+.link-box-content .link-info {
+  font-weight: bold;
+  margin: 1em 1em 2em 0;
+}
+.link-box-content .link-footer {
+  margin-top: 4em;
+}
