--- a/src/less/index.less
+++ b/src/less/index.less
@@ -2,3 +2,4 @@
 @import './components/box.less';
 @import './components/personalia.less';
 @import './components/adresse.less';
+@import './components/links.less';
