--- a/src/less/index.less
+++ b/src/less/index.less
@@ -3,3 +3,5 @@
 @import './components/personalia.less';
 @import './components/adresse.less';
 @import './components/links.less';
+@import './components/alternativer.less';
+@import './components/ekspanderbart-panel.less';
