Make panel styling match design

--- a/src/less/components/ekspanderbart-panel.less
+++ b/src/less/components/ekspanderbart-panel.less
@@ -39,21 +39,6 @@ textarea {
   line-height: inherit;
 }
 
-.ekspanderbartPanel__hode {
-  background: none rgb(255, 255, 255);
-  border: 0px;
-  text-align: left;
-  width: 100%;
-  display: block;
-  padding: 1rem;
-  border-radius: 4px;
-  position: relative;
-  cursor: pointer;
-  color: rgb(62, 56, 50);
-  margin-bottom: 0px;
-  text-decoration: none;
-}
-
 .ekspanderbartPanel__flex-wrapper {
   display: flex;
   align-items: center;
@@ -125,7 +110,7 @@ textarea {
   text-align: left;
   width: 100%;
   display: block;
-  padding: 1rem;
+  padding: 1.5rem;
   border-radius: 4px;
   position: relative;
   cursor: pointer;
@@ -146,6 +131,11 @@ textarea {
   font-size: 1.25rem;
   line-height: 1.5625rem;
   font-weight: 600;
+}
+
+.ekspanderbartPanel__innhold {
+  padding: 20px;
+  background-color: white;
 }
 
 .ekspanderbartPanel--lukket .ekspanderbartPanel__indikator {
