--- a/src/css/index.css
+++ b/src/css/index.css
@@ -142,20 +142,6 @@ textarea {
   font-size: inherit;
   line-height: inherit;
 }
-.ekspanderbartPanel__hode {
-  background: none #ffffff;
-  border: 0px;
-  text-align: left;
-  width: 100%;
-  display: block;
-  padding: 1rem;
-  border-radius: 4px;
-  position: relative;
-  cursor: pointer;
-  color: #3e3832;
-  margin-bottom: 0px;
-  text-decoration: none;
-}
 .ekspanderbartPanel__flex-wrapper {
   display: flex;
   align-items: center;
@@ -220,7 +206,7 @@ textarea {
   text-align: left;
   width: 100%;
   display: block;
-  padding: 1rem;
+  padding: 1.5rem;
   border-radius: 4px;
   position: relative;
   cursor: pointer;
@@ -239,6 +225,10 @@ textarea {
   font-size: 1.25rem;
   line-height: 1.5625rem;
   font-weight: 600;
+}
+.ekspanderbartPanel__innhold {
+  padding: 20px;
+  background-color: white;
 }
 .ekspanderbartPanel--lukket .ekspanderbartPanel__indikator {
   display: inline-block;
