--- a/src/less/index.less
+++ b/src/less/index.less
@@ -5,3 +5,4 @@
 @import './components/links.less';
 @import './components/alternativer.less';
 @import './components/ekspanderbart-panel.less';
+@import './components/footer-info.less';
