--- a/src/less/components/ekspanderbart-panel.less
+++ b/src/less/components/ekspanderbart-panel.less
@@ -39,6 +39,20 @@ textarea {
   line-height: inherit;
 }
 
+.panel {
+  background: none rgb(255, 255, 255);
+  border: 0px;
+  text-align: left;
+  width: 100%;
+  display: block;
+  padding: 1.5rem;
+  border-radius: 4px;
+  position: relative;
+  pointer: cursor;
+  color: rgb(62, 56, 50);
+  margin-bottom: 0px;
+}
+
 .ekspanderbartPanel__flex-wrapper {
   display: flex;
   align-items: center;
@@ -116,7 +130,6 @@ textarea {
   cursor: pointer;
   color: rgb(62, 56, 50);
   margin-bottom: 0px;
-  text-decoration: none;
 }
 
 .ekspanderbartPanel__flex-wrapper {
@@ -130,7 +143,7 @@ textarea {
   font-family: "Source Sans Pro", Arial, sans-serif;
   font-size: 1.25rem;
   line-height: 1.5625rem;
-  font-weight: 600;
+  font-weight: 900;
 }
 
 .ekspanderbartPanel__innhold {
