--- a/src/less/components/box.less
+++ b/src/less/components/box.less
@@ -24,6 +24,13 @@
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.16),0 1px 10px 0 rgba(0,0,0,0.12)!important;
   display: inline-block;
   width: @boxwidth;
+
+  .information-circle {
+    float: right;
+    padding: 0;
+    border: none;
+    background: none;
+  }
 }
 
 .box-bottom-margin {
