--- a/src/less/components/box.less
+++ b/src/less/components/box.less
@@ -18,6 +18,31 @@
   }
 }
 
+.InfoBox {
+  padding: 2em;
+  background-color: #ffe5c2;
+  display: inline-block;
+  width: @boxwidth;
+
+  hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ff9100;
+    padding: 0;
+  }
+
+  h2 {
+    text-align: center;
+    margin-bottom: 4rem;
+  }
+
+  .info-content {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+}
+
 .Box {
   padding: 2em;
   background-color: white;
