--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,10 +1,18 @@
 .Header {
-  background-color: #DBDEA1;
+  background-color: #ccdee6;
   width: 100%;
-  min-height: 200px;
+  height: 320px;
+  border-bottom: 5px solid #669db4;
+  margin-bottom: 7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .Header h1 {
-  margin-top: 0;
+  margin-bottom: 8rem;
+}
+.Header .header-pc-icon {
+  margin-top: auto;
 }
 .BoxContainer {
   width: 100%;
