--- a/src/less/components/header.less
+++ b/src/less/components/header.less
@@ -1,8 +1,21 @@
+@pcwidth: 143px;
+
 .Header {
-  background-color: #DBDEA1;
+  background-color: #ccdee6;
   width: 100%;
-  min-height: 200px;
+  height: 320px;
+  border-bottom: 5px solid #669db4;
+  margin-bottom: 7rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   h1 {
-    margin-top: 0;
+    margin-bottom: 8rem;
+  }
+
+  .header-pc-icon {
+    margin-top: auto;
   }
 }
