--- a/src/less/components/header.less
+++ b/src/less/components/header.less
@@ -1,5 +1,11 @@
 @pcwidth: 143px;
 
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 .Header {
   background-color: #ccdee6;
   width: 100%;
@@ -8,14 +14,47 @@
   margin-bottom: 7rem;
 
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 
-  h1 {
-    margin-bottom: 8rem;
+  .header-content {
+    width: 40vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   .header-pc-icon {
     margin-top: auto;
   }
+
+  .snakkeboble {
+    position: relative;
+    background: #fff;
+    border-radius: .4em;
+    height: 5rem;
+    width: 500px;
+    padding-right: 2em;
+    padding-left: 2em;
+    padding-top: 1em;
+    padding-bottom: 6.5em;
+    margin-bottom: 1em;
+  }
+
+  .snakkeboble:after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 50%;
+    width: 0;
+    height: 0;
+    border: 20px solid transparent;
+    border-left-color: #fff;
+    border-right: 0;
+    margin-top: -10px;
+    margin-right: -20px;
+  }
 }
+
+
