--- a/src/less/components/header.less
+++ b/src/less/components/header.less
@@ -1,11 +1,3 @@
-@pcwidth: 143px;
-
-* {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
 .Header {
   background-color: #ccdee6;
   width: 100%;
@@ -18,8 +10,13 @@
   align-items: center;
   justify-content: space-between;
 
+  h1 {
+    margin-right: 18vw;
+    font-weight: bold;
+  }
+
   .header-content {
-    width: 40vw;
+    width: 50vw;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -34,7 +31,7 @@
     background: #fff;
     border-radius: .4em;
     height: 5rem;
-    width: 500px;
+    width: 489px;
     padding-right: 2em;
     padding-left: 2em;
     padding-top: 1em;
@@ -46,7 +43,7 @@
     content: '';
     position: absolute;
     right: 0;
-    top: 50%;
+    top: 60%;
     width: 0;
     height: 0;
     border: 20px solid transparent;
@@ -56,5 +53,3 @@
     margin-right: -20px;
   }
 }
-
-
