Use Source Sans Pro font

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -6,3 +6,4 @@
 @import './components/alternativer.less';
 @import './components/ekspanderbart-panel.less';
 @import './components/footer-info.less';
+@import './components/body.less';
