--- a/src/less/components/body.less
+++ b/src/less/components/body.less
@@ -1,3 +1,10 @@
+@link-color: #4a90e2;
+
 body {
   font-family: 'Source Sans Pro', sans-serif;
+  color: #3e3832;
+
+  a {
+    color: @link-color;
+  }
 }
