--- a/src/less/components/ekspanderbart-panel.less
+++ b/src/less/components/ekspanderbart-panel.less
@@ -122,6 +122,7 @@ textarea {
   background: none rgb(255, 255, 255);
   border: 0px;
   text-align: left;
+  font-weight: bold;
   width: 100%;
   display: block;
   padding: 1.5rem;
