Add print button

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -321,7 +321,10 @@ textarea {
   vertical-align: middle;
 }
 .alternativ-panel {
-  margin: 5px;
+  margin-top: 5px;
+}
+.print-panel {
+  cursor: pointer;
 }
 .footer-info {
   width: 60vw;
