--- a/src/less/index.less
+++ b/src/less/index.less
@@ -4,6 +4,6 @@
 @import './components/adresse.less';
 @import './components/links.less';
 @import './components/alternativer.less';
-@import './components/ekspanderbart-panel.less';
+@import './components/panel.less';
 @import './components/footer-info.less';
 @import './components/body.less';
