Change texts and add info text to Dine saker

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -123,6 +123,11 @@
   list-style: none;
   columns: 2;
 }
+@media only screen and (max-width: 959px) {
+  .personalia-list {
+    columns: 1;
+  }
+}
 .personalia-list li {
   padding: 1rem;
 }
