--- a/src/less/components/box.less
+++ b/src/less/components/box.less
@@ -1,5 +1,7 @@
 @boxwidth: 85%;
 @iconwidth: 15%;
+@tablet:    ~"only screen and (max-width: 959px)";
+@mobile:    ~"only screen and (max-width: 420px)";
 
 .BoxContainer {
   width: 100%;
@@ -56,6 +58,110 @@
     padding: 0;
     border: none;
     background: none;
+  }
+
+  ul.list-column-1 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    list-style-type: none;
+
+    li {
+      padding: 1rem;
+      flex-grow: 1;
+      width: 100%;
+
+      .title {
+        font-weight: bold;
+        display: block;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+    }
+  }
+
+  ul.list-column-2 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    list-style-type: none;
+
+    li {
+      padding: 1rem;
+      flex-grow: 1;
+      width: 50%;
+
+      @media @mobile {
+        width: 100%;
+      }
+
+      .title {
+        font-weight: bold;
+        display: block;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+    }
+  }
+
+  ul.list-column-3 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    list-style-type: none;
+
+    li {
+      padding: 1rem;
+      flex-grow: 1;
+      width: 33%;
+
+      @media @tablet {
+        width: 50%;
+      }
+
+      @media @mobile {
+        width: 100%;
+      }
+
+      .title {
+        font-weight: bold;
+        display: block;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+    }
+  }
+
+  ul.list-column-4 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    list-style-type: none;
+
+    li {
+      padding: 1rem;
+      flex-grow: 1;
+      width: 25%;
+
+      @media @tablet {
+        width: 50%;
+      }
+
+      @media @mobile {
+        width: 100%;
+      }
+
+      .title {
+        font-weight: bold;
+        display: block;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+    }
   }
 }
 
