--- a/src/less/index.less
+++ b/src/less/index.less
@@ -5,3 +5,4 @@
 @import './components/panel.less';
 @import './components/footer-info.less';
 @import './components/body.less';
+@import './components/alertstripe.less';
