--- a/src/less/components/header.less
+++ b/src/less/components/header.less
@@ -24,6 +24,10 @@
 
   .header-pc-icon {
     margin-top: auto;
+
+    @media @tablet {
+      visibility: hidden;
+    }
   }
 
   .snakkeboble {
@@ -51,5 +55,9 @@
     border-right: 0;
     margin-top: -10px;
     margin-right: -20px;
+
+    @media @tablet {
+      visibility: hidden;
+    }
   }
 }
