--- a/src/css/index.css
+++ b/src/css/index.css
@@ -248,6 +248,11 @@
   margin-left: 15%;
   width: 50vw;
 }
+@media only screen and (max-width: 959px) {
+  .AlternativesBox {
+    width: 90vw;
+  }
+}
 * {
   box-sizing: border-box;
 }
