--- a/src/css/index.css
+++ b/src/css/index.css
@@ -158,6 +158,21 @@
   text-overflow: ellipsis;
   overflow: hidden;
 }
+.Box ul.list-column-2.address-columns li:nth-child(1) {
+  order: 1;
+}
+.Box ul.list-column-2.address-columns li:nth-child(2) {
+  order: 3;
+}
+.Box ul.list-column-2.address-columns li:nth-child(3) {
+  order: 5;
+}
+.Box ul.list-column-2.address-columns li:nth-child(4) {
+  order: 2;
+}
+.Box ul.list-column-2.address-columns li:nth-child(5) {
+  order: 4;
+}
 .Box ul.list-column-3 {
   display: flex;
   flex-direction: row;
