--- a/src/less/components/box.less
+++ b/src/less/components/box.less
@@ -110,6 +110,28 @@
     }
   }
 
+  ul.list-column-2.address-columns {
+    li:nth-child(1) {
+      order: 1;
+    }
+
+    li:nth-child(2) {
+      order: 3;
+    }
+
+    li:nth-child(3) {
+      order: 5;
+    }
+
+    li:nth-child(4) {
+      order: 2;
+    }
+
+    li:nth-child(5) {
+      order: 4;
+    }
+  }
+
   ul.list-column-3 {
     display: flex;
     flex-direction: row;
