Endret sideoppsett. Forbered nytt design

--- a/src/less/components/app.less
+++ b/src/less/components/app.less
@@ -3,6 +3,7 @@
 body {
   font-family: 'Source Sans Pro', sans-serif;
   color: #3e3832;
+  background-color: #e9e7e7;
 
   a {
     color: @link-color;
@@ -11,4 +12,14 @@ body {
   .capitalize {
     text-transform: capitalize;
   }
+}
+
+main {
+  display: flex;
+  justify-content: center;
+}
+
+.Content {
+  width: 100%;
+  max-width: 800px;
 }
