--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,8 +1,11 @@
+@tablet: ~'only screen and (max-width: 959px)';
+@mobile: ~'only screen and (max-width: 420px)';
+
+@import './components/app.less';
 @import './components/header.less';
 @import './components/box.less';
 @import './components/links.less';
 @import './components/alternativer.less';
 @import './components/panel.less';
 @import './components/footer-info.less';
-@import './components/body.less';
 @import './components/alertstripe.less';
