--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,13 +1,30 @@
-.Header {
-  background-color: #ccdee6;
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+  color: #3e3832;
+  background-color: #e9e7e7;
+}
+body a {
+  color: #4a90e2;
+}
+body .capitalize {
+  text-transform: capitalize;
+}
+main {
+  display: flex;
+  justify-content: center;
+}
+.Content {
   width: 100%;
-  height: 320px;
-  border-bottom: 5px solid #669db4;
-  margin-bottom: 7rem;
+  max-width: 800px;
+}
+.Header {
+  background-color: white;
+  min-height: 320px;
+  padding: 4rem 4rem 0 4rem;
+  margin: 7rem 0 2rem 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 .Header h1 {
   margin-right: 18vw;
@@ -21,7 +38,6 @@
   }
 }
 .Header .header-content {
-  width: 50vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -46,10 +62,7 @@
   border-radius: 0.4em;
   height: 5rem;
   width: 489px;
-  padding-right: 2em;
-  padding-left: 2em;
-  padding-top: 1em;
-  padding-bottom: 5em;
+  padding: 2rem 2rem 2rem 0;
   margin-bottom: 1em;
 }
 @media only screen and (max-width: 959px) {
@@ -84,9 +97,8 @@
   align-items: center;
 }
 .BoxWithHeader {
-  width: 50vw;
+  width: 100%;
   min-height: 200px;
-  margin-right: 15%;
 }
 .BoxWithHeader h1 {
   margin-left: 15%;
@@ -269,12 +281,10 @@
   margin-top: 4em;
 }
 .AlternativesBox {
-  width: 50vw;
+  width: 100%;
   min-height: 200px;
-  margin-right: 15%;
 }
 .AlternativesBox h1 {
-  margin-left: 15%;
   width: 50vw;
 }
 @media only screen and (max-width: 959px) {
@@ -453,16 +463,6 @@ textarea {
 }
 .footer-info .folder-block-icon {
   margin-bottom: 1rem;
-}
-body {
-  font-family: 'Source Sans Pro', sans-serif;
-  color: #3e3832;
-}
-body a {
-  color: #4a90e2;
-}
-body .capitalize {
-  text-transform: capitalize;
 }
 .alertstripe {
   background-color: #ffffff;
