--- a/src/less/components/alternativer.less
+++ b/src/less/components/alternativer.less
@@ -1,19 +1,15 @@
 @boxwidth: 85%;
 @iconwidth: 15%;
-@tablet:    ~"only screen and (max-width: 959px)";
-@mobile:    ~"only screen and (max-width: 420px)";
 
 .AlternativesBox {
+  width: 100%;
+  min-height: 200px;
+
+  h1 {
     width: 50vw;
-    min-height: 200px;
-    margin-right: @iconwidth;
+  }
 
-    h1 {
-      margin-left: @iconwidth;
-        width: 50vw;
-    }
-
-    @media @tablet {
-      width: 90vw;
-    }
+  @media @tablet {
+    width: 90vw;
+  }
 }
