--- a/src/less/components/box.less
+++ b/src/less/components/box.less
@@ -1,7 +1,5 @@
 @boxwidth: 85%;
 @iconwidth: 15%;
-@tablet:    ~"only screen and (max-width: 959px)";
-@mobile:    ~"only screen and (max-width: 420px)";
 
 .BoxContainer {
   width: 100%;
@@ -11,9 +9,8 @@
 }
 
 .BoxWithHeader {
-  width: 50vw;
+  width: 100%;
   min-height: 200px;
-  margin-right: @iconwidth;
 
   h1 {
     margin-left: @iconwidth;
@@ -53,7 +50,7 @@
 .Box {
   padding: 2em;
   background-color: white;
-  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.16),0 1px 10px 0 rgba(0,0,0,0.12)!important;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.16), 0 1px 10px 0 rgba(0, 0, 0, 0.12) !important;
   display: inline-block;
   width: @boxwidth;
 
