--- a/src/less/components/header.less
+++ b/src/less/components/header.less
@@ -1,17 +1,12 @@
-@tablet:    ~"only screen and (max-width: 959px)";
-@mobile:    ~"only screen and (max-width: 420px)";
-
 .Header {
-  background-color: #ccdee6;
-  width: 100%;
-  height: 320px;
-  border-bottom: 5px solid #669db4;
-  margin-bottom: 7rem;
+  background-color: white;
+  min-height: 320px;
+  padding: 4rem 4rem 0 4rem;
+  margin: 7rem 0 2rem 0;
 
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
 
   h1 {
     margin-right: 18vw;
@@ -25,7 +20,6 @@
   }
 
   .header-content {
-    width: 50vw;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -47,13 +41,10 @@
   .snakkeboble {
     position: relative;
     background: #fff;
-    border-radius: .4em;
+    border-radius: 0.4em;
     height: 5rem;
     width: 489px;
-    padding-right: 2em;
-    padding-left: 2em;
-    padding-top: 1em;
-    padding-bottom: 5em;
+    padding: 2rem 2rem 2rem 0;
     margin-bottom: 1em;
 
     @media @tablet {
