--- a/src/less/components/header.less
+++ b/src/less/components/header.less
@@ -9,11 +9,10 @@
   justify-content: flex-start;
 
   h1 {
-    margin-right: 18vw;
     font-weight: bold;
+    margin-bottom: 0;
 
     @media @tablet {
-      margin-right: 0;
       text-align: center;
       font-size: 7vw;
     }
