--- a/src/less/components/box.less
+++ b/src/less/components/box.less
@@ -1,4 +1,3 @@
-@boxwidth: 85%;
 @iconwidth: 15%;
 
 .BoxContainer {
@@ -50,9 +49,10 @@
 .Box {
   padding: 2em;
   background-color: white;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.16), 0 1px 10px 0 rgba(0, 0, 0, 0.12) !important;
-  display: inline-block;
-  width: @boxwidth;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  width: 100%;
 
   .information-circle {
     float: right;
@@ -195,7 +195,6 @@
 }
 
 .box-icon {
-  display: inline-block;
   vertical-align: top;
 
   @media @tablet {
