--- a/src/less/index.less
+++ b/src/less/index.less
@@ -2,6 +2,8 @@
 @tablet: ~"only screen and (max-width: 959px)";
 @mobile: ~"only screen and (max-width: 420px)";
 
+@import "~nav-frontend-typografi-style";
+
 @import "./components/app.less";
 @import "./components/header.less";
 @import "./components/box.less";
