--- a/src/css/index.css
+++ b/src/css/index.css
@@ -18,18 +18,23 @@ main {
   max-width: 800px;
 }
 .Header {
-  position: relative;
-  background-color: white;
-  min-height: 300px;
-  padding: 0 4rem 0 4rem;
-  margin: 7rem 0 2rem 0;
   display: flex;
+  position: relative;
   flex-direction: column;
-  justify-content: flex-end;
+  background-color: white;
+  padding: 2rem 2rem 0 2rem;
+  margin: 7rem 0 2rem 0;
 }
 .Header h1 {
   font-weight: bold;
   margin-bottom: 0;
+}
+@media only screen and (min-width: 959px) {
+  .Header {
+    justify-content: flex-end;
+    padding: 2rem 4rem 0 4rem;
+    min-height: 300px;
+  }
 }
 .Header .header-content {
   display: flex;
@@ -53,18 +58,29 @@ main {
   }
 }
 .Header .header-icon-mobile {
-  height: 7em;
+  height: 6em;
   width: auto;
 }
-.Header .header-icon-mobile-wrapper {
+.Header .header-icon-mobile-circle {
+  align-items: flex-end;
+  justify-content: center;
+  background: #c6c2bf;
+  border-radius: 50%;
+  overflow: hidden;
+  flex-shrink: 0;
+  display: flex;
+  height: 7em;
+  width: 7em;
+}
+.Header .header-icon-mobile-container {
   width: 100%;
   position: absolute;
   display: none;
-  top: -4.5em;
+  top: -3.5em;
   left: 0;
 }
 @media only screen and (max-width: 959px) {
-  .Header .header-icon-mobile-wrapper {
+  .Header .header-icon-mobile-container {
     display: flex;
     justify-content: center;
   }
