--- a/src/less/components/header.less
+++ b/src/less/components/header.less
@@ -11,7 +11,12 @@
     margin-bottom: 0;
   }
 
+  @media @tablet {
+    border-radius: 0.5em;
+  }
+
   @media @desktop {
+    border-radius: 8px;
     justify-content: flex-end;
     padding: 2rem 4rem 0 4rem;
     min-height: 300px;
