Midlertidig fiks for å fikse størrelsen til ikonene

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -387,8 +387,13 @@ main {
   font-style: italic;
   margin-top: 2rem;
 }
+.icon {
+  width: 100%;
+}
 .box-icon {
   vertical-align: top;
+  width: 4rem;
+  margin-right: 1rem;
 }
 @media only screen and (max-width: 959px) {
   .box-icon {
