--- a/src/less/components/box.less
+++ b/src/less/components/box.less
@@ -194,8 +194,14 @@
   margin-top: 2rem;
 }
 
+.icon {
+  width: 100%;
+}
+
 .box-icon {
   vertical-align: top;
+  width: 4rem;
+  margin-right: 1rem;
 
   @media @tablet {
     visibility: hidden;
